--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
-    "mdbootstrap": "^4.9.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "angular-bootstrap-md": "^8.6.0",
+    "animate.css": "^3.7.2",
+    "core-js": "^3.4.1",
     "node_module": "^0.0.0",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "rxjs": "^6.5.3",
+    "zone.js": "^0.10.2"
   },
   "scripts": {
     "ng": "ng",
